--- a/src/components/screens/auth/auth.module.scss
+++ b/src/components/screens/auth/auth.module.scss
@@ -7,9 +7,6 @@
   position: relative;
   overflow: hidden;
 
-  //background-size: cover;
-  //background-position: center;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,31 +23,34 @@
 
   &_inner {
     position: relative;
-    padding: 20px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+    width: 100vw;
+    max-height: 100vh;
+    overflow-y: auto;
+  }
+
+  &_wrapperForm {
+    padding: 20px;
     box-shadow:
       8px 8px 10px rgba(204, 204, 204, 0.3),
       -8px -8px 10px #fff;
     border-radius: 35px;
-    max-width: 650px;
-    width: 100%;
-    min-height: 200px;
     background: $background-body;
-    margin-top: 150px;
+    max-width: 630px;
+    width: 100%;
   }
 
   &_logoWrapper {
-    position: absolute;
-    left: 50%;
-    top: -140px;
-    transform: translateX(-50%);
-
     display: flex;
     align-items: center;
+    margin-bottom: 15px;
   }
 
   &_logoImg {
-    width: 100px;
+    width: 55px;
     height: auto;
     margin-right: 15px;
     background-color: $background-body;
@@ -58,7 +58,7 @@
   }
 
   &_logoText {
-    font-size: 60px;
+    font-size: 40px;
     font-weight: $title-weight;
     font-family: Poppins, sans-serif;
 
