--- a/src/components/ui/profile/bars/contatc-profile/contactList.module.scss
+++ b/src/components/ui/profile/bars/contatc-profile/contactList.module.scss
@@ -1,13 +1,10 @@
-@import '@/styles/varible';
+@import "@/styles/varible";
 
 .listWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
+  max-width: 300px;
   width: 100%;
-  max-width: 275px;
-  min-height: 325px;
+  padding: 24px;
   border-radius: 24px;
   border: 1px solid $light-text-color;
   background: $background-option;
@@ -15,18 +12,24 @@
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
     -4px -4px 25px 0px $light-text-color,
     4px 4px 35px 0px $light-text-color inset;
-  > ul {
+
+  &_list {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 35px;
-    > li {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      color: $main-text-color;
-      font-size: $font-size-md;
-      font-weight: 600;
-    }
+    width: 100%;
+
+    overflow: hidden;
+  }
+
+  &_item {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    color: $main-text-color;
+    font-size: $font-size-md;
+    font-weight: 600;
   }
 }
 
