--- a/src/components/ui/profile/card-profile/cardProfile.module.scss
+++ b/src/components/ui/profile/card-profile/cardProfile.module.scss
@@ -1,10 +1,9 @@
-@import '@/styles/varible';
+@import "@/styles/varible";
 
 .card {
   display: flex;
   position: relative;
   align-items: center;
-  //background-image: url("src/../public/img/profile/profile-bg.png");
   background-image: url("../../../../../public/img/profile/profile-bg.png");
   width: 100%;
   background-repeat: no-repeat;
@@ -15,6 +14,13 @@
   padding: 23px 30px 23px 15px;
   margin-bottom: 36px;
   border-radius: 8px;
+
+  &_avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid $light-text-color;
+  }
 }
 .titleWrapper {
   display: flex;
