add classes in HTML

--- a/src/components/ui/courses/card/CourseItem/card.module.scss
+++ b/src/components/ui/courses/card/CourseItem/card.module.scss
@@ -75,7 +75,7 @@
     align-items:center;
     margin-top: 8px;
     gap: 9px;
-    > li { 
+     .icon_container{
         display: flex;
         align-items: center;
         justify-content: center;
