--- a/src/components/ui/courses/card/CoursesByIditem/courses.module.scss
+++ b/src/components/ui/courses/card/CoursesByIditem/courses.module.scss
@@ -38,7 +38,7 @@
   border-bottom: 1px solid $light-text-color;
   padding-bottom: 32px;
   margin-top: 63px;
-  > li {
+   .icon_container {
     display: flex;
     align-items: center;
     color: $second-text-color;
