--- a/src/components/ui/courses/bars/bar.module.scss
+++ b/src/components/ui/courses/bars/bar.module.scss
@@ -1,32 +1,13 @@
 @import '@/styles/varible';
 
-.barWrapper {
-  display: flex;
-  color: $second-text-color;
-  gap: 40px;
-  margin-top: 26px;
-  > button {
-    color: $second-text-color;
-    font-weight: $title-weight;
-    line-height: 24px;
-    transition: all 0.3s linear;
-    padding: 3px 12px;
-    &:hover {
-      color: $background-item;
-      border-radius: 5px;
-      background: #f3f3f3;
-      box-shadow: 0 0 8px 0 rgba(67, 67, 67, 0.25) inset;
-    }
-  }
-}
-.supBarWrapper {
+.supBar_wrapper {
   border-radius: 8px;
   padding: 10px 25px;
   background: $light-text-color;
   display: flex;
   color: $second-text-color;
   margin-top: 26px;
-  > button {
+  .supBar_btn {
     display: flex;
     gap: 8px;
     color: $second-text-color;
