--- a/src/components/screens/courses/courses.module.scss
+++ b/src/components/screens/courses/courses.module.scss
@@ -104,6 +104,11 @@
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
     -4px -4px 25px 0px $light-text-color,
     4px 4px 35px 0px $light-text-color inset;
+  transition: all 0.3s;
+  &:hover{
+    border:1px solid $background-item ;
+    transition: all 0.3s;
+  }
 }
 .cardTitle {
   color: $background-item;
