--- a/src/components/ui/profile/bars/friends/friends.module.scss
+++ b/src/components/ui/profile/bars/friends/friends.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/varible';
 
-.friendWrapper {
+.friend_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
