--- a/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
+++ b/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/varible';
 
-.achievementContainer {
+.achievement_container {
   display: grid;
   grid-template-columns: repeat(3, minmax(60px, 150px));
   width: 100%;
