--- a/src/components/screens/profile/profile.module.scss
+++ b/src/components/screens/profile/profile.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/varible";
+
 .main {
   overflow-y: auto;
   padding-right: 15px;
@@ -15,11 +17,11 @@
   gap: 53px;
   display: flex;
   border-radius: 24px;
-  border: 1px solid #fff;
-  background: #ededed;
+  border: 1px solid $light-text-color;
+  background: $background-option;
   padding: 25px;
   box-shadow:
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
-    -4px -4px 25px 0px #fff,
-    4px 4px 35px 0px #fff inset;
+    -4px -4px 25px 0px $light-text-color,
+    4px 4px 35px 0px $light-text-color inset;
 }
