--- a/src/components/ui/courses/card/CourseItem/card.module.scss
+++ b/src/components/ui/courses/card/CourseItem/card.module.scss
@@ -12,48 +12,37 @@
     border: 1px solid $light-text-color;
     background: $background-option;
     box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px $light-text-color, 4px 4px 35px 0px $light-text-color inset;
-    padding:23px 31px 22px 21px;
     transition: all 0.3s;
+    padding:23px 31px 22px 21px;
+    &_top{
+        display:flex;
+        gap: 11px;
+        @media (max-width:1367px) {
+            flex-wrap: wrap;
+        }
+    }
+    &_img{
+        margin-bottom:27px;
+        border-radius: 19px;
+        &[data-attribute="programming"] {
+            background: linear-gradient(138deg, #0029FF -8%, #FA00FF 106.69%);
+            padding: 17px 20px 18px 14px;
+
+        }
+    }
+
     &:hover{
         border:1px solid $background-item ;
-        transition: all 0.3s;
     }
 }
-.cardImg{
-    margin-bottom:27px;
-}
-.cardTop{
-    display:flex;
-    gap: 11px;
-    @media (max-width:1367px) {
-        flex-wrap: wrap;
-    }
-}
-.iconWrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 30px;
-    background-color: $light-text-color;
-    >svg{
-        width: 28px;
-        height: 23px;
-    }
-}
-.cardBottomContent{
-    display: flex;
-    align-items: center;
-    gap: 9px;
-    margin-top:6px;
 
-}
+
+
 .title{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 229px;
+    width: 100%;
     max-width: 229px;
     height: 100%;
     max-height: 35px;
@@ -66,7 +55,8 @@
 }
 .subtitle{
     text-align: center;
-    width: 100px;
+    width: 100%;
+    max-width: 100px;
     color: $background-item;
     font-size: $font-size-lg;
     font-weight:  $title-weight;
@@ -74,7 +64,7 @@
     background: $light-text-color;
     padding: 10px 0;
 }
-.subtitleWrapper{
+.subtitle_wrapper{
     display: flex;
     align-items:center;
     margin-top: 8px;
@@ -93,24 +83,24 @@
             }
         }
 }
-.barWrapper {
+.bar_wrapper {
     display: flex;
     gap:20px;
     padding-bottom:7px;
     border-bottom: 1px solid $light-text-color;
-    >li{
+    .icon_container{
         display: flex;
         align-items: center;
         >svg {
             width:34px;
             height:34px;
             margin-right: 7px;
-            
+
             &:first-child{
                 width:46px;
                 margin-right: 12px;
             }
-           
+
         }
     }
    
