--- a/src/components/ui/profile/bars/contatc-profile/contactList.module.scss
+++ b/src/components/ui/profile/bars/contatc-profile/contactList.module.scss
@@ -19,7 +19,6 @@
     align-items: flex-start;
     gap: 35px;
     width: 100%;
-
     overflow: hidden;
   }
 
@@ -29,7 +28,7 @@
     gap: 16px;
     color: $main-text-color;
     font-size: $font-size-md;
-    font-weight: 600;
+    font-weight: $title-weight;
   }
 }
 
