--- a/src/components/ui/profile/bars/skills/languages/language.module.scss
+++ b/src/components/ui/profile/bars/skills/languages/language.module.scss
@@ -12,7 +12,7 @@
     text-align: center;
     color: $main-text-color;
     font-size: $font-size-md;
-    font-weight: 600;
+    font-weight: $title-weight;
     border-radius: 20px;
     background: $light-text-color;
     padding: 7px 21px;
@@ -38,7 +38,7 @@
     width: 100%;
     max-width: 85px;
     color: $background-item;
-    font-size: 20px;
+    font-size: $font-size-lg;
     font-weight: $title-weight;
     border-radius: 20px;
     background: $light-text-color;
