--- a/src/components/ui/profile/bars/skills/achievements/AchievmentItem/AchievmentItem.module.scss
+++ b/src/components/ui/profile/bars/skills/achievements/AchievmentItem/AchievmentItem.module.scss
@@ -1,14 +1,16 @@
 @import "@/styles/varible";
 .card_wrapper {
+  width: 100%;
+  max-width: 122px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 9px;
+
   .named {
     color: $second-text-color;
-    font-size: $font-size-md;
+    font-size: clamp(0.75rem, 0.7rem + 0.25vw, 1rem);
     font-weight: $title-weight;
-    text-align: center;
   }
 
 }
