--- a/src/components/ui/profile/bars/skills/languages/language.module.scss
+++ b/src/components/ui/profile/bars/skills/languages/language.module.scss
@@ -1,6 +1,6 @@
 @import "@/styles/varible";
 
-.menuList {
+.languages_menu_list {
   width: 100%;
   max-width: 440px;
   display: flex;
@@ -8,17 +8,17 @@
   gap: 20px;
   margin-top: 20px;
 
-  > li {
+  .languages_menu_item {
     text-align: center;
     color: $main-text-color;
-    font-size: $font-size-md;
+    font-size: clamp(0.75rem, 0.675rem + 0.375vw, 1.125rem);
     font-weight: $title-weight;
     border-radius: 20px;
     background: $light-text-color;
     padding: 7px 21px;
   }
 }
-.addList {
+.add_list {
   > svg {
     width: 35px;
     height: 35px;
