add modal window without func(add info)

--- a/src/components/ui/profile/bars/addBlock/addBlock.module.scss
+++ b/src/components/ui/profile/bars/addBlock/addBlock.module.scss
@@ -1,6 +1,7 @@
 @import '@/styles/varible';
 
 .add_wrapper {
+  cursor: pointer;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -14,26 +15,53 @@
     -4px -4px 25px 0px $light-text-color,
     4px 4px 35px 0px $light-text-color inset;
   margin-top: 27px;
-  svg{
-    background-color: #11142d;
+
+  .modal_wrapper{
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    background-color: #f2f2f2;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    max-width: 740px;
+    width: 100%;
+    min-height: 450px;
+    height: 50vh;
+    padding: 12px;
+    transform: translateX(50%);
+    .menu_list{
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px 50px;
+      width: 100%;
+      max-width: 670px;
+      margin: 0 auto;
+      .menu_list_item{
+        .menu_list_button{
+          color: $second-text-color;
+          font-size: 16px;
+          font-weight: $title-weight;
+          margin-top: 5px;
+        }
+      }
+    }
+
+    .img_imitation{
+      width: 190px;
+      height: 187px;
+      border-radius: 24px;
+      border: 1px solid #FFF;
+      background: $background-option;
+      box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px #FFF, 4px 4px 35px 0px #FFF inset;
+    }
+
   }
-}
+  .btnAdd {
+    @include plus-button;
 
-.modal_wrapper{
-  position: absolute;
-  bottom: 0;
-  right: 50%;
-  background-color: #f2f2f2;
-  border-top-left-radius: 24px;
-  border-top-right-radius: 24px;
-  max-width: 740px;
-  width: 100%;
-  min-height: 450px;
-  height: 60vh;
-  padding: 12px;
-  transform: translateX(50%);
-}
-.btnAdd {
-  @include plus-button;
+  }
 
 }
+
