--- a/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
+++ b/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
@@ -2,12 +2,21 @@
 
 .achievement_container {
   display: grid;
-  grid-template-columns: repeat(3, minmax(60px, 150px));
+  grid-template-columns: repeat(auto-fill, minmax(60px,1fr));
+  grid-template-rows: repeat(auto-fill, 102px);
   width: 100%;
   max-width: 325px;
-  grid-gap: 49px 16px;
-
-
+  grid-gap: 16px 39px;
+  @media (max-width: 768px) {
+    .achievement_container {
+      grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    }
+  }
+  //display: flex;
+  //flex-wrap: wrap;
+  //width: 100%;
+  //max-width: 325px;
+  //gap: 16px 53px;
 }
 .title {
   color: $main-text-color;
