--- a/src/components/ui/profile/bars/friends/friends.module.scss
+++ b/src/components/ui/profile/bars/friends/friends.module.scss
@@ -16,6 +16,7 @@
     -4px -4px 25px 0px $light-text-color,
     4px 4px 35px 0px #fff inset;
   padding: 24px 36px;
+  grid-area: friends;
   .info_wrapper {
     display: flex;
     align-items: center;
