--- a/src/components/screens/profile/profile.module.scss
+++ b/src/components/screens/profile/profile.module.scss
@@ -6,33 +6,87 @@
   padding-bottom: 20px;
   width: 100%;
 }
-.profile_container {
+.btn_container{
   width: 100%;
-  display: flex;
+  max-width: 250px;
+}
+.profile_container {
+  display: grid;
+  grid-template-columns: minmax(150px, 250px);
+  grid-template-areas:
+  "contact achive lang"
+  "friends achive lang"
+  "friends rate rate"
+  "second-btn pop-up pop-up"
+;
   gap: 50px;
-
 }
 .courses_block {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 365px));
+  grid-column-gap:50px;
   width: 100%;
-  gap: calc(100px - 54px);
-  display: flex;
   background: $background-option;
   padding: 25px;
   border-radius: 24px;
   border: 1px solid #FFF;
-  background: #EDEDED;
   box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px #FFF, 4px 4px 35px 0px #FFF inset;
-  > div:first-child{
-    border-right: 2px solid #D9D9D9;
-    padding-right: 54px;
+  grid-area: skills;
+}
+.rate {
+  display: grid;
+  margin-bottom: 30px;
+  grid-area: rate;
 
+
+  &_title {
+    color: $main-text-color;
+    font-size: 22px;
+    font-weight: $title-weight;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  &_numbers {
+    width: 100%;
+    max-width: 85px;
+    color: $background-item;
+    font-size: $font-size-lg;
+    font-weight: $title-weight;
+    border-radius: 20px;
+    background: $light-text-color;
+    padding: 9px 13px;
   }
 }
-@media (max-width: 769px) {
-  .courses_block {
-    > div:first-child {
-      border-right: none;
-      padding-right: 0;
-    }
+
+@media screen and (max-width: 1014px) {
+  .profile_container {
+    grid-template-areas:
+    "contact rate"
+    "contact friends"
+    "achive lang"
+    "pop-up pop-up"
+    "second-btn second-btn "
+  ;
+    gap: 25px;
+  }
+
+}
+
+@media(max-width: 1014px){
+  .rate{
+    width: 100%;
+    max-width: 275px;
+    grid-template-columns: repeat(auto-fill, 100px);
+    border-radius: 24px;
+    border: 1px solid #FFF;
+    box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px #FFF, 4px 4px 35px 0px #FFF inset;
+    height: 84px;
+    align-items: center;
+    justify-content: space-between;
+    padding-left:10px;
+  }
+  .btn_container{
+    display: none;
   }
 }
