--- a/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
+++ b/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
@@ -1,13 +1,18 @@
 @import '@/styles/varible';
 
+.achievement_container_list{
+  display: grid;
+  grid-area: achive;
+
+}
 .achievement_container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(60px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(60px, 75px));
   grid-template-rows: repeat(auto-fill, 102px);
   width: 100%;
   max-width: 325px;
   grid-gap: 16px 39px;
-  @media (max-width: 768px) {
+  @media (max-width: 768px) and (max-width: 1014px){
     .achievement_container {
       grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
     }
@@ -24,4 +29,24 @@
   font-weight: $title-weight;
   margin-bottom: 16px;
   margin-left: 17px;
+}
+@media(max-width: 1014px) {
+  .achievement_container_list {
+    display: grid;
+    width: 100%;
+    max-width: 275px;
+    grid-area: achive;
+    border-radius: 24px;
+    border: 1px solid #FFF;
+    background: #EDEDED;
+    box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px #FFF, 4px 4px 35px 0px #FFF inset;
+    justify-items: center
+  }
+  .achievement_container {
+    display: grid;
+    width: 100%;
+    justify-content: space-evenly;
+    padding: 10px 5px;
+    grid-gap: 15px 16px;
+  }
 }
