--- a/src/components/ui/profile/bars/skills/languages/language.module.scss
+++ b/src/components/ui/profile/bars/skills/languages/language.module.scss
@@ -1,60 +1,63 @@
 @import "@/styles/varible";
-
-.languages_menu_list {
+.languages{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(40px,115px));
-  grid-template-rows: repeat(auto-fill, 35px);
-  grid-row-gap: 20px;
-  grid-column-gap: 10px;
-  width: 100%;
-  max-width: 440px;
-  justify-items: start;
-  align-items: center;
-  //display: flex;
-  //flex-wrap: wrap;
-  //gap: 20px;
-  //margin-top: 20px;
-
-  .languages_menu_item {
-    text-align: center;
-    color: $main-text-color;
-    font-size: clamp(0.75rem, 0.675rem + 0.375vw, 1.125rem);
-    font-weight: $title-weight;
-    border-radius: 20px;
-    background: $light-text-color;
-    padding: 7px 15px;
-  }
-}
-.add_list {
-  svg{
-    width: 35px;
-    height: 35px;
-  }
-}
-.rate {
-  margin-bottom: 30px;
-
-  &_title {
-    color: $main-text-color;
-    font-size: 22px;
-    font-weight: $title-weight;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  &_numbers {
+  grid-area: lang;
+  .languages_menu_list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px,115px));
+    grid-template-rows: repeat(auto-fill, 35px);
+    grid-row-gap: 20px;
+    grid-column-gap: 10px;
     width: 100%;
-    max-width: 85px;
-    color: $background-item;
-    font-size: $font-size-lg;
-    font-weight: $title-weight;
-    border-radius: 20px;
-    background: $light-text-color;
-    padding: 9px 13px;
+    max-width: 440px;
+    justify-items: start;
+    align-items: center;
+    @media(max-width: 1149px) and (max-width: 1014px){
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(40px,100px));
+    }
+
+    .languages_menu_item {
+      text-align: center;
+      color: $main-text-color;
+      font-size: clamp(0.75rem, 0.675rem + 0.375vw, 1.125rem);
+      font-weight: $title-weight;
+      border-radius: 20px;
+      background: $light-text-color;
+      padding: 7px 15px;
+    }
+  }
+  .add_list {
+    svg{
+      width: 35px;
+      height: 35px;
+    }
   }
 }
+
+
 .title {
   color: $main-text-color;
   font-size: 22px;
   font-weight: $title-weight;
   margin-bottom: 20px;
+}
+@media(max-width: 1014px) {
+  .languages {
+    display: grid;
+    width: 100%;
+    max-width: 275px;
+    border-radius: 24px;
+    border: 1px solid #FFF;
+    background: #EDEDED;
+    box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px #FFF, 4px 4px 35px 0px #FFF inset;
+    grid-template-rows: repeat(auto-fill, 50px);
+    justify-items: center
+  }
+  .languages_menu_list {
+    display: grid;
+    width: 100%;
+    max-width: 440px;
+    justify-content: center;
+  }
 }
