--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -76,6 +76,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
+main[class*="__main"] {
+  overflow-y: auto;
+  padding-right: 15px;
+  padding-bottom: 20px;
+  width: 100%;
+}
 
 h1,
 h2,
