--- a/src/components/ui/profile/bars/skills/languages/language.module.scss
+++ b/src/components/ui/profile/bars/skills/languages/language.module.scss
@@ -2,7 +2,7 @@
 
 .languages_menu_list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(40px,115px));
+  grid-template-columns: repeat(auto-fill, minmax(70px,115px));
   grid-template-rows: repeat(auto-fill, 35px);
   grid-row-gap: 20px;
   grid-column-gap: 10px;
@@ -10,10 +10,7 @@
   max-width: 440px;
   justify-items: start;
   align-items: center;
-  //display: flex;
-  //flex-wrap: wrap;
-  //gap: 20px;
-  //margin-top: 20px;
+
 
   .languages_menu_item {
     text-align: center;
@@ -33,7 +30,11 @@
 }
 .rate {
   margin-bottom: 30px;
-
+  @media (max-width: 1079px) {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
   &_title {
     color: $main-text-color;
     font-size: 22px;
@@ -57,4 +58,18 @@
   font-size: 22px;
   font-weight: $title-weight;
   margin-bottom: 20px;
+  @media(max-width: 1080px) {
+    text-align: center;
+  }
+}
+@media (max-width: 1078px) {
+  .languages_menu_list {
+    grid-template-columns: repeat(auto-fill, minmax(70px,105px));
+    grid-template-rows: repeat(auto-fill, 35px);
+    grid-row-gap: 20px;
+    grid-column-gap: 0;
+    width: 100%;
+    max-width: 440px;
+    justify-content: center;
+  }
 }
