--- a/src/components/screens/courses/courses.module.scss
+++ b/src/components/screens/courses/courses.module.scss
@@ -10,8 +10,8 @@
   display: flex;
   position: relative;
   align-items: center;
-  &:focus{
-    outline:$background-item ;
+  &:focus {
+    outline: $background-item;
   }
 }
 .container {
@@ -46,11 +46,11 @@
   padding-left: 20px;
   color: $second-text-color;
   transition: all 0.3s;
-  &:hover{
-    border:1px solid $background-item ;
+  &:hover {
+    border: 1px solid $background-item;
     transition: all 0.3s;
   }
-  &:focus{
+  &:focus {
     outline-color: $background-item;
   }
 }
@@ -75,8 +75,7 @@
 }
 .cardContainer {
   display: grid;
-  grid-template-columns: repeat(2, minmax(250px, 842px));
-  grid-template-rows: repeat(1, 400px);
+  grid-template-columns: 2fr 1fr;
   grid-gap: 42px;
   margin: 42px 0;
 }
@@ -106,8 +105,8 @@
     -4px -4px 25px 0px $light-text-color,
     4px 4px 35px 0px $light-text-color inset;
   transition: all 0.3s;
-  &:hover{
-    border:1px solid $background-item ;
+  &:hover {
+    border: 1px solid $background-item;
     transition: all 0.3s;
   }
 }
