--- a/src/components/reused/modal-window/modal-window.module.scss
+++ b/src/components/reused/modal-window/modal-window.module.scss
@@ -13,22 +13,22 @@
   &_modal {
     position: absolute;
 
-    max-height: calc(100vh - 30px);
     overflow-y: auto;
 
     background-color: #fff;
     padding: 35px;
-
-    @media screen and (max-width: 767px) {
-      max-width: calc(100vw - 30px);
-      min-width: 300px;
-    }
 
     &.center {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       border-radius: 40px;
+      max-height: calc(100vh - 30px);
+
+      @media screen and (max-width: 767px) {
+        max-width: calc(100vw - 30px);
+        min-width: 300px;
+      }
     }
 
     &.bottom {
@@ -38,6 +38,19 @@
 
       border-top-left-radius: 40px;
       border-top-right-radius: 40px;
+      max-height: calc(100vh - 300px);
+
+      @media screen and (max-width: 1024px) {
+        max-height: calc(100vh - 150px);
+        max-width: 100vw;
+        min-width: 320px;
+      }
+
+      @media screen and (max-width: 767px) {
+        max-height: calc(100vh - 120px);
+        max-width: 100vw;
+        min-width: 320px;
+      }
     }
   }
 }
