--- a/src/components/ui/profile/bars/skills/achievements/AchievmentItem/AchievmentItem.module.scss
+++ b/src/components/ui/profile/bars/skills/achievements/AchievmentItem/AchievmentItem.module.scss
@@ -7,6 +7,21 @@
   align-items: center;
   gap: 9px;
 
+  .card_icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    max-width: 75px;
+    max-height: 75px;
+    border-radius: 50%;
+    border: 3px solid #FFFFFF;
+    >svg{
+      width: 40px;
+      height: 40px;
+    }
+  }
   .named {
     color: $second-text-color;
     font-size: clamp(0.75rem, 0.7rem + 0.25vw, 1rem);
