--- a/src/components/reused/partition-plug/plug.module.scss
+++ b/src/components/reused/partition-plug/plug.module.scss
@@ -1,3 +1,22 @@
+$animation-duration:1s;
+$animation-delay: 0.5s;
+
+@mixin white_star {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  transform: rotate(-30.01deg);
+  border-radius: 2px;
+  background: rgb(205, 244, 255);
+}
+@mixin green_star{
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  transform: rotate(-30.01deg);
+  border-radius: 5px;
+  background: rgb(164, 206, 161);
+}
 .plug{
   position: relative;
   background: linear-gradient(60deg, rgb(59, 133, 246), rgb(63, 140, 255),rgb(19, 73, 166));
@@ -21,6 +40,7 @@
     left: 270px;
     bottom: -3%;
     position: absolute;
+    animation: cube ease-in 5s infinite ;
     .cube {
       perspective: 800px;
       width: 300px;
@@ -59,6 +79,7 @@
     top: -15%;
     right: 166px;
     position: absolute;
+    animation: cube2 ease-in 5s infinite ;
     .cube_second {
       perspective: 800px;
       width:200px;
@@ -94,134 +115,114 @@
   }
 
 }
+.star_green{
+  @include green_star;
+}
+.star_white{
+  @include white_star;
+}
 .star1{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
   background: rgb(205, 244, 255);
   left: 50%;
+  animation: blinker infinite 2s ease-in-out;
   top: 40%;
 }
 .star2{
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  transform: rotate(-30.01deg);
-  border-radius: 5px;
-  background: rgb(164, 206, 161);
+  animation: blinker infinite 2s ease-in-out;
   left: 66%;
   top: 30%;
 }
 .star3{
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  transform: rotate(-30.01deg);
-  border-radius: 5px;
-  background: rgb(164, 206, 161);
+  animation: blinker infinite 2s ease-in-out;
   left: 50%;
   top: 70%;
 }
 .star4{
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  transform: rotate(-30.01deg);
-  border-radius: 5px;
-  background: rgb(164, 206, 161);
+  animation: blinker infinite 2s ease-in-out;
   left: 90%;
   top: 10%;
 }
 .star5{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 60%;
   top:15%;
 }
 .star6{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
   left: 70%;
+  animation: blinker infinite 2s ease-in-out;
   top:20%;
 }
 .star7{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 58%;
   top:30%;
 
 }
 .star8{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 82%;
   top: 20%;
 }
 .star9{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 60%;
   top: 66%;
 }
 .star10{
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 69%;
   top: 65%;
 }
 .star11{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 80%;
   top:64%;
 }
 .star12{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 90%;
   top: 63%;
 }
 .star13{
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  transform: rotate(-30.01deg);
-  border-radius: 2px;
-  background: rgb(205, 244, 255);
+  animation: blinker infinite 2s ease-in-out;
   left: 58%;
   top:80%;
+}
+@keyframes blinker {
+  to {
+    opacity: 0.7;
+  }
+  from {
+    opacity: 1.0;
+    filter: drop-shadow(1px 0px 14px #fff);
+  }
+}
+@keyframes cube2 {
+  0%{
+    top: -15%;
+  }
+  50%{
+    top:-12%;
+  }
+  100%{
+    top: -15%;
+  }
+}
+@keyframes cube {
+  0%{
+    bottom: -3%;
+  }
+  50%{
+    bottom: 10px;
+  }
+  100%{
+    bottom:-3%;
+  }
+}
+//animation star
+@for $i from 1 through 13 {
+  .star:nth-child(#{$i}) {
+    animation: blinker $animation-duration infinite alternate $i * $animation-delay;
+
+  }
 }
