--- a/src/components/reused/partition-plug/plug2.module.scss
+++ b/src/components/reused/partition-plug/plug2.module.scss
@@ -201,7 +201,7 @@ $animation-delay: 0.5s;
     top: -15%;
   }
   50%{
-    top:-5%;
+    top:-12%;
   }
   100%{
     top: -15%;
@@ -212,7 +212,7 @@ $animation-delay: 0.5s;
     bottom: -3%;
   }
   50%{
-    bottom: 1%;
+    bottom: 10px;
   }
   100%{
     bottom:-3%;
