--- a/src/components/ui/profile/profile-header/profileHeader.module.scss
+++ b/src/components/ui/profile/profile-header/profileHeader.module.scss
@@ -7,7 +7,7 @@
   background-image: url("../../../../../public/img/profile/profile-bg.png");
   width: 100%;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: auto 100%;
   background-position: left;
   background-color: $light-text-color;
   gap: 46px;
