--- a/src/components/ui/profile/bars/people-count/peopleCount.module.scss
+++ b/src/components/ui/profile/bars/people-count/peopleCount.module.scss
@@ -1,12 +1,12 @@
 @import '@/styles/varible';
 
-.friend_wrapper {
+.count_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 27px;
+  justify-content: space-between;
+  margin-top: 24px;
   width: 100%;
-  max-width: 275px;
   min-height: 200px;
   border-radius: 24px;
   border: 1px solid $light-text-color;
@@ -15,26 +15,26 @@
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
     -4px -4px 25px 0px $light-text-color,
     4px 4px 35px 0px #fff inset;
-  padding: 24px 36px;
+  padding: 20px 28px;
   .info_wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 75px;
-    margin-bottom: 23px;
+    flex-direction: column;
       .info_title {
         color: $main-text-color;
-        font-size: 22px;
-        font-weight: 600;
+        font-size: 18px;
+        font-weight: 500;
       }
       .info_quantity {
         color: $main-text-color;
-        font-size: 22px;
+        font-size: 28px;
         font-weight: 600;
       }
   }
   svg {
-    width: 155px;
-    height: 115px;
+    width: 102px;
+    height: 78px;
+    stroke-width: 8px;
   }
 }
