--- a/src/components/ui/profile/bars/successes/achievements/AchievmentItem/AchievmentItem.module.scss
+++ b/src/components/ui/profile/bars/successes/achievements/AchievmentItem/AchievmentItem.module.scss
@@ -1,20 +1,27 @@
 @import "@/styles/varible";
 .card_wrapper {
   width: 100%;
-  max-width: 122px;
+  min-width: 96px;
+  max-width: 108px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 9px;
+  gap: 8px;
+  flex: 0 1 96px;
+
+  @media (max-width: 1080px) {
+    flex: 1 1 108px
+  }
+  @media (max-width: 850px) {
+    flex: 1 1 96px;
+  }
 
   .card_icon{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    max-width: 75px;
-    max-height: 75px;
+    width: 72px;
+    height: 72px;
     border-radius: 50%;
     border: 3px solid #FFFFFF;
     >svg{
