--- a/src/components/layout/sidebar/sidebar.module.scss
+++ b/src/components/layout/sidebar/sidebar.module.scss
@@ -185,6 +185,7 @@
     padding: 0 10px 0 20px;
     width: 100%;
     height: 90px;
+    position: relative;
 
     border-top: 1px solid #e4e4e4;
 
