--- a/src/components/screens/auth/form/sing-in-form.module.scss
+++ b/src/components/screens/auth/form/sing-in-form.module.scss
@@ -22,7 +22,7 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
 
     margin: 0 auto;
   }
