created functionality for changing password

--- a/src/components/screens/auth/form/sing-in-form.module.scss
+++ b/src/components/screens/auth/form/sing-in-form.module.scss
@@ -78,6 +78,13 @@
     }
   }
 
+  &_repeatBtn {
+    margin-top: 5px;
+    button {
+      width: 100%;
+    }
+  }
+
   &_button {
     background-color: $background-item;
     color: $light-text-color;
@@ -117,7 +124,6 @@
       }
     }
   }
-
   &_separatorWrap {
     display: inline-block;
     position: relative;
